Changes for compilation error